Fixed some alignment issues

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -47,9 +47,18 @@ body {
     background-size: cover;
 }
 
-.card  a {
-    text-align: center;
+.card * {
+    color: black;
+    text-decoration: none;
+}
 
+.card  {
+    border-color: black;
+    max-width: 500px;
+}
+
+.card:hover {
+    border-width: 1.5px;
 }
 
 .hero-text {
